@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>clj-ssh</groupId>
   <artifactId>clj-ssh</artifactId>
-  <version>0.3.3-SNAPSHOT</version>
+  <version>0.3.4-SNAPSHOT</version>
   <name>clj-ssh</name>
   <description>
     clj-ssh is a clojure wrapper for he jsch library, and can be used as an
@@ -26,39 +26,63 @@
       </resource>
     </resources>
     <plugins>
-      <plugin>
-        <groupId>com.theoryinpractise</groupId>
-        <artifactId>clojure-maven-plugin</artifactId>
-        <version>1.3.7</version>
-        <configuration>
-          <sourceDirectories>
-            <sourceDirectory>src</sourceDirectory>
-          </sourceDirectories>
-          <testSourceDirectories>
-            <testSourceDirectory>test</testSourceDirectory>
-          </testSourceDirectories>
-          <clojureOptions>-Xmx512m -Djava.awt.headless=true -XX:MaxPermSize=256m</clojureOptions>
-          <warnOnReflection>false</warnOnReflection>
-          <compileDeclaredNamespaceOnly>true</compileDeclaredNamespaceOnly>
-          <temporaryOutputDirectory>true</temporaryOutputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <id>compile-clojure</id>
-            <phase>compile</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-          </execution>
-          <execution>
-            <id>test-clojure</id>
-            <phase>test</phase>
-            <goals>
-              <goal>test</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+        <plugin>
+          <groupId>org.cloudhoist.plugin</groupId>
+          <artifactId>zi</artifactId>
+          <version>${zi.version}</version>
+          <dependencies>
+            <dependency>
+              <groupId>org.clojure</groupId>
+              <artifactId>clojure</artifactId>
+              <version>${clojure.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>ritz</groupId>
+              <artifactId>ritz</artifactId>
+              <version>${ritz.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>codox</groupId>
+              <artifactId>codox</artifactId>
+              <version>${codox.version}</version>
+            </dependency>
+          </dependencies>
+          <executions>
+            <!-- setup zi to process sources and test sources, and run tests -->
+            <execution>
+              <id>default-resources</id>
+              <phase>process-resources</phase>
+              <goals>
+                <goal>resources</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>default-test-resources</id>
+              <phase>process-test-resources</phase>
+              <goals>
+                <goal>testResources</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>default-test</id>
+              <phase>test</phase>
+              <goals>
+                <goal>test</goal>
+              </goals>
+            </execution>
+            <execution>
+              <id>default-site</id>
+              <phase>site</phase>
+              <goals>
+                <goal>marginalia</goal>
+                <goal>codox</goal>
+              </goals>
+              <configuration>
+                <copyright>Copyright (c) 2010, 2011, 2012 Hugo Duncan</copyright>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       <plugin>
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.3.1</version>
@@ -97,19 +121,22 @@
     <dependency>
       <groupId>com.jcraft</groupId>
       <artifactId>jsch</artifactId>
-      <version>0.1.44-1</version>
+      <version>${jsch.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>jsch-agent-proxy</groupId>
+      <artifactId>jsch-agent-proxy</artifactId>
+      <version>0.0.4</version>
+    </dependency>
+    <dependency>
+      <groupId>jsch-agent-proxy</groupId>
+      <artifactId>jsch-agent-proxy-jna</artifactId>
+      <version>0.0.4</version>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.14</version>
-      <optional>true</optional>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>swank-clojure</groupId>
-      <artifactId>swank-clojure</artifactId>
-      <version>1.3.1</version>
       <optional>true</optional>
       <scope>test</scope>
     </dependency>
@@ -149,5 +176,10 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <clojure.version>1.2.0</clojure.version>
     <slingshot.version>0.2.0</slingshot.version>
+    <jsch.version>0.1.48</jsch.version>
+    <zi.version>0.4.5</zi.version>
+    <codox.version>0.6.1</codox.version>
+    <marginalia.version>0.7.0</marginalia.version>
+    <ritz.version>0.2.1</ritz.version>
   </properties>
 </project>
